# mirrorman

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  README.md  ROADMAP.md  meson.build  mirrorman.desktop  mirrorman.in
data/: com.parchlinux.mirrorman-helper.conf  com.parchlinux.mirrorman.Helper.service  com.parchlinux.mirrorman.Helper.xml  com.parchlinux.mirrorman.desktop  com.parchlinux.mirrorman.policy  mirrorman-helper.service  mirrorman-refresh.service  mirrorman-refresh.timer
locale/fa/LC_MESSAGES/: mirrorman.mo
po/: en.mo  en.po  fa.mo  fa.po  mirrorman.pot
src/: helper_client.rs  i18n.rs  lib.rs  log_viewer.rs  main.py  main.rs  mirror_manager.py  mirror_manager.rs  pacman_settings.rs  pacman_util.py  repo_config.py  repo_config.rs  sync_manager.py  sync_manager.rs  templates.rs  utils.py  utils.rs
tests/: cli_test.rs  helper_test.rs
