[package]
name = "mirrorman"
version = "0.4.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_16"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
glib = "0.20"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
regex-lite = "0.1"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
