[package]
name = "mirrorman"
version = "0.5.0-beta.1"
edition = "2021"

[lib]
name = "mirrorman"
path = "src/lib.rs"

[[bin]]
name = "mirrorman"
path = "src/main.rs"

[[bin]]
name = "mirrorman-helper"
path = "src/bin/mirrorman-helper.rs"

[[bin]]
name = "mirrorman-cli"
path = "src/bin/mirrorman-cli.rs"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_16"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_6"] }
glib = "0.20"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
regex-lite = "0.1"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
zbus = { version = "4", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }

